<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/initial_import_prompt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueButton"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView01"
                style="@style/HeaderLarge"
                android:text="@string/welcome" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/old_glory_blue"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/start_screen_uninitialized"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="normal" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:onClick="initialImport"
        android:text="@string/button_continue"
        style="@style/BottomButton"/>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/pub_id" />

</RelativeLayout>